Poprawiono funkcjonalność otrzymywania kodu rabatowego w przypadku niezadowolenia klienta oraz poprawiono działanie koszyka, stylu ofert, obsługi rabatów i kodów promocyjnych
Poprawa działania koszyka, stylu ofert, obsługi rabatów i kodów promocyjnych

Koszyk działa teraz dużo płynniej – poprawiono interakcje, wszystko reaguje jak trzeba i wygląda lepiej
– dodano wyświetlanie dostępnych kodów rabatowych, rabaty procentowe i kwotowe działają poprawnie
– jeśli klient jest niezadowolony i anuluje catering, dostaje automatycznie kod rabatowy do wykorzystania
– poprawiono styl ofert – teraz wyglądają bardziej przejrzyście i schludnie
– w panelu pracownika przyciski akcji mieszczą się w jednej linii, nic się już nie rozjeżdża
– dodano brakujący kafelek „Użytkownicy” w dashboardzie pracownika
– poprawiono przekierowanie w panelu klienta – kliknięcie „Twój profil” prowadzi teraz tam, gdzie powinno

--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,7 @@ yarn-error.log*
 # System
 .DS_Store
 Thumbs.db
+
+# Produkty - wrzucaj tylko default.png, reszta ignorowana
+/storage/app/public/products/*
+!/storage/app/public/products/default.png
